# azure-sdks

./: .gitignore  Justfile  README.md  requirements.txt
dev/: dev.ipynb
sdks/aad-b2c/: README.md  pyproject.toml
sdks/aad-b2c/src/aad/: __init__.py  main.py
sdks/aad-b2c/src/aad/fastapi/: __init__.py  dependency.py
sdks/aad-b2c/src/aad/util/: __init__.py  cyrpto.py  jwks.py  meta.py  req.py
sdks/blob-az/: Justfile  README.md  pyproject.toml
sdks/blob-az/src/blob_az/: __init__.py
sdks/blob-az/src/blob_az/blob/: __init__.py  blob.py
sdks/blob-az/src/blob_az/container/: __init__.py  container.py
sdks/blob-az/src/blob_az/env/: __init__.py  keys.py
sdks/blob-az/src/blob_az/list/: __init__.py  list.py
sdks/blob-az/src/blob_az/util/: __init__.py  util.py
sdks/cosmosdb/: Justfile  README.md  pyproject.toml
sdks/cosmosdb/src/cosmosdb/: __init__.py
sdks/cosmosdb/src/cosmosdb/create/: __init__.py  create.py
sdks/cosmosdb/src/cosmosdb/delete/: __init__.py  delete.py
sdks/cosmosdb/src/cosmosdb/env/: __init__.py  keys.py
sdks/cosmosdb/src/cosmosdb/list/: __init__.py  list.py
sdks/cosmosdb/src/cosmosdb/patch/: __init__.py  patch.py
sdks/cosmosdb/src/cosmosdb/query/: __init__.py  query.py
sdks/cosmosdb/src/cosmosdb/util/: __init__.py  util.py
sdks/pubsub-az/: Justfile  README.md  pyproject.toml
sdks/pubsub-az/src/pubsub_az/: __init__.py
sdks/pubsub-az/src/pubsub_az/client/: client.py
sdks/pubsub-az/src/pubsub_az/env/: __init__.py  env.py
sdks/pubsub-az/src/pubsub_az/util/: __init__.py  util.py
sdks/queue-az/: README.md  pyproject.toml
sdks/queue-az/src/queue_az/: __init__.py
sdks/queue-az/src/queue_az/config/: __init__.py  config.py
sdks/queue-az/src/queue_az/errors/: __init__.py  errors.py
sdks/queue-az/src/queue_az/msg/: __init__.py  messages.py
sdks/queue-az/src/queue_az/queues/: __init__.py  queues.py
sdks/queue-az/src/queue_az/util/: __init__.py  util.py
